--- a/package.json
+++ b/package.json
@@ -38,20 +38,18 @@
     "classnames": "^2.2.6",
     "core-js": "^3.8.3",
     "graphql": "^15.5.0",
+    "raf": "^3.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.9.0",
-    "redux": "^4.0.5"
+    "reactstrap": "^8.9.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
     "@types/node": "^12.19.16",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
-    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/reactstrap": "^8.7.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
